k8s/nautobot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nautobot
  labels:
    app: nautobot
spec:
  selector:
    app: nautobot
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
